# P3_2

./: CMakeLists.txt
src/: main.cpp  main.h
src/exercises/ex1/: ex1.cpp  ex1.h
src/exercises/ex2/: ex2.cpp  ex2.h
src/exercises/ex3/: ex3.cpp  ex3.h
src/exercises/ex4/: ex4.cpp  ex4.h
src/exercises/ex5/: ex5.cpp  ex5.h
src/exercises/ex6/: ex6.cpp  ex6.h
src/exercises/ex7/: ex7.cpp  ex7.h
src/exercises/ex8/: ex8.cpp  ex8.h
