cmake_minimum_required(VERSION 3.29)
project(P3_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(P3_2 src/main.cpp
        src/main.h
        src/exercises/ex1/ex1.cpp
        src/exercises/ex1/ex1.h
        src/exercises/ex2/ex2.cpp
        src/exercises/ex2/ex2.h
        src/exercises/ex3/ex3.cpp
        src/exercises/ex3/ex3.h
        src/exercises/ex4/ex4.cpp
        src/exercises/ex4/ex4.h
        src/exercises/ex5/ex5.cpp
        src/exercises/ex5/ex5.h
        src/exercises/ex6/ex6.cpp
        src/exercises/ex6/ex6.h
        src/exercises/ex7/ex7.cpp
        src/exercises/ex7/ex7.h
        src/exercises/ex8/ex8.cpp
        src/exercises/ex8/ex8.h
)
